# Promethium

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  fix_notebook_01.py  pyproject.toml  pytest.ini  requirements.txt  run_local.ps1
.github/: FUNDING.yml
benchmarks/: run_all.py
config/: default.yaml  development.yaml  production.yaml
datasets/: registry.yaml
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  requirements.txt
docs/: api-reference.md  architecture.md  benchmarking.md  cli.md  configuration.md  data-engineering.md  data-models.md  deployment-guide.md  developer-guide.md  distribution.md  faq.md  glossary.md  kaggle-integration.md  methodology.md  ml-pipelines.md  notebooks-overview.md  ops-and-monitoring.md  overview.md  publishing-workflow.md  roadmap.md  ui-ux.md  user-guide.md
frontend/: README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
notebooks/: 01_quickstart_basic_usage.ipynb  02_data_ingestion_and_quality_control.ipynb  03_signal_processing_basics.ipynb  04_matrix_completion_and_compressive_sensing.ipynb  05_deep_learning_unet_reconstruction.ipynb  06_gan_based_high_fidelity_reconstruction.ipynb  07_evaluation_metrics_and_visualization.ipynb  08_kaggle_and_colab_integration.ipynb  09_backend_api_and_job_system_demo.ipynb  10_end_to_end_case_study_synthetic_data.ipynb  11_end_to_end_case_study_real_world_data.ipynb  12_benchmarking_and_ablation_studies.ipynb  13_data_engineering_pipelines_and_batch_jobs.ipynb  14_advanced_model_customization_and_training.ipynb  15_troubleshooting_and_best_practices.ipynb  demo_reconstruction.ipynb  model_training.ipynb
promethiumR.Rcheck/: 00install.out  promethiumR-Ex.R  promethiumR-Ex.Rout  promethiumR-Ex.timings
scripts/: export_model.py  generate_docs.py  generate_test_data.py  setup_db.py
src/: promethium.db
testdata/: README.md  (+1 more)
(+204 files in other folders)
