[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promethium"
version = "1.0.0"
description = "State-of-the-art AI-driven framework for seismic signal reconstruction, denoising, and geophysical data enhancement"
authors = [{name = "Olaf Yunus Laitinen Imanov", email = "contact@promethium.dev"}]
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.10"
keywords = ["seismic", "geophysics", "reconstruction", "deep-learning", "signal-processing", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "xarray>=2023.0",
    "obspy>=1.4.0",
    "segyio>=1.9.0",
    "torch>=2.0.0",
    "scikit-learn>=1.2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "celery>=5.3.0",
    "redis>=4.6.0",
    "python-multipart",
    "typer>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
    "httpx>=0.24.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
